--- a/sgeg-admin/.env.prod
+++ b/sgeg-admin/.env.prod
@@ -1,8 +1,13 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+#Fichero configuración app SGEG - PHP Laravel 
+
+APP_NAME=SGEG
+APP_ENV=production
+APP_KEY=base64:Q5nUstAuGIBelSuMG37E++mPueeY100wIGLGcPnzvL0=
+APP_DEBUG=false
+APP_URL=http://127.0.0.1
+
+APP_LOCALE=es
+APP_FALLBACK_LOCALE=es
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +18,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sgeg
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=XXXXX
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -37,6 +42,13 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+MAIL_TO_TEST=null
+MAIL_NAME_TEST=null
+
+TELEGRAM_BOT_TOKEN = 7314993544:AAHgQqcSMd81p7lbDB9OU2P3pgS7hcfb2zA
+TELEGRAM_USER = appsgeg_bot
+TELEGRAM_CHAT_ID = 7314993544
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -57,3 +69,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#APP 
+ITEMS_PAGE = 20
+ASSETS_PATH = "/sgeg/"
+ASSETS_IMAGES  = "/images/"
