--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,56 @@
-# ruta: /mnt/project/sandra/app
 version: "3.7"
+
 services:
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "8090:80"
-    volumes:
-      - ./sgeg:/var/www
-      #- ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/conf.d/:/etc/nginx/conf.d/
- 
-    networks:
-      - network_sgeg
-  db:
-    platform: linux/amd64
-    image: mysql
-    container_name: mysql
-    restart: unless-stopped
-    ports:
-      - "3366:3306"
-    environment:
-      MYSQL_DATABASE: sgeg24DB
-      MYSQL_PASSWORD: sgeg_password
-      MYSQL_USER: sgeg_user
-      MYSQL_ROOT_PASSWORD: mysql
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    volumes:
-      - ./dbdata:/var/lib/mysql
-    networks:
-      - network_sgeg
-  sgeg:
-    build:
-      #args:
-       # user: usgeg
-       # uid: 1004
-      context: ./
+  app:
+    build:      
+      context: ./sgeg
       dockerfile: Dockerfile
-    #image: sgeg24
-    container_name: sgeg
+    container_name: sgeg-app
     restart: unless-stopped
-    tty: true
-    ports:
-      - "9000:9000"
-    working_dir: /var/www
+    working_dir: /var/www/html
     volumes:
-      - ./sgeg:/var/www
+      - ./sgeg:/var/www/html
+      - uploads:/var/www/html/storage/app/public
     networks:
-      - network_sgeg
+      - network-sgeg-db
+      - network-sgeg-nginx
+    depends_on:
+      - db
+    command: sh -c "php artisan migrate --force && php artisan db:seed --force && php-fpm" 
+  db:
+    image: mysql:8.0
+    container_name: sgeg-db
+    restart: unless-stopped
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - db_data:/var/lib/mysql
+    networks:
+      - network-sgeg-db
+  nginx:
+    image: nginx:latest
+    container_name: sgeg-nginx
+    restart: unless-stopped
+    ports:
+      - 8000:80
+      - 443:443
+    volumes:
+      - ./sgeg/public:/var/www/html/public
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - network-sgeg-nginx
+  
 networks:
-  network_sgeg:
+  network-sgeg-db:
     driver: bridge
+  network-sgeg-nginx:
+    driver: bridge
+
 volumes:
-  dbdata:
+  db_data:
+  uploads:
