--- a/sgeg/.env.prod
+++ b/sgeg/.env.prod
@@ -33,14 +33,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Configuración de SendGrid
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USERNAME=apikey
+MAIL_PASSWORD= 
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=sandra.pereira@alumnos.uvigo.es
 MAIL_FROM_NAME="${APP_NAME}"
+ 
 
 MAIL_TO_TEST=null
 MAIL_NAME_TEST=null
