--- a/sgeg/.env.dev
+++ b/sgeg/.env.dev
@@ -91,8 +91,8 @@ MAIL_FROM_NAME="${APP_NAME}"
 # MAIL_MAILER=smtp
 # MAIL_HOST=sandbox.smtp.mailtrap.io
 # MAIL_PORT=2525
-# MAIL_USERNAME=5b108002f030a2
-# MAIL_PASSWORD=fe319f5114f8f3
+# MAIL_USERNAME= 
+# MAIL_PASSWORD= 
 # MAIL_FROM_ADDRESS= sandratouza.edu@gmail.com
 # MAIL_FROM_NAME="SGEG"
 
