--- a/sgeg/.env.dev
+++ b/sgeg/.env.dev
@@ -129,4 +129,4 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 #APP 
 ITEMS_PAGE = 20
 ASSETS_PATH = "/sgeg/"
-ASSETS_IMAGES  = "/images/"
+ASSETS_IMAGES  = "/images/"git 
