change env configuration

--- a/sgeg/.env.dev
+++ b/sgeg/.env.dev
@@ -17,30 +17,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sgeg_testing
-DB_USERNAME=usertest
-DB_PASSWORD=abc123.-
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=sgeg_testing
-#DB_DATABASE=sgeg
-DB_USERNAME=usertest
-DB_PASSWORD=abc123.-
+DB_DATABASE=sgeg
+DB_USERNAME=sgeg_user
+DB_PASSWORD=sgeg_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -59,12 +38,11 @@ REDIS_PORT=6379
 # MAIL_MAILER=smtp
 # MAIL_HOST=smtp.hostinger.com
 # MAIL_PORT=465
-# MAIL_USERNAME=sgeg@sgeg.touzaprojects.com
+# MAIL_USERNAME= 
 # MAIL_PASSWORD= 
 # MAIL_ENCRYPTION=ssl
-# MAIL_FROM_ADDRESS=sgeg@sgeg.touzaprojects.com
+# MAIL_FROM_ADDRESS= 
 # MAIL_FROM_NAME="${APP_NAME}"
-
  
 # #mailgun
 # MAIL_MAILER=smtp
@@ -73,7 +51,7 @@ REDIS_PORT=6379
 # MAIL_USERNAME= 
 # MAIL_PASSWORD= 
 # MAIL_ENCRYPTION=SSL
-# MAIL_FROM_ADDRESS= postmaster@sandbox1e28d28b25ce42b982901bdba5345f0c.mailgun.org
+# MAIL_FROM_ADDRESS=  
 # MAIL_FROM_NAME="${APP_NAME}"
 
 # Configuración de SendGrid
@@ -83,7 +61,7 @@ MAIL_PORT=587
 MAIL_USERNAME=apikey
 MAIL_PASSWORD= 
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=sandra.pereira@alumnos.uvigo.es
+MAIL_FROM_ADDRESS= 
 MAIL_FROM_NAME="${APP_NAME}"
 
 
@@ -93,7 +71,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 # MAIL_PORT=2525
 # MAIL_USERNAME= 
 # MAIL_PASSWORD= 
-# MAIL_FROM_ADDRESS= sandratouza.edu@gmail.com
+# MAIL_FROM_ADDRESS=  
 # MAIL_FROM_NAME="SGEG"
 
 MAIL_TO_TEST = sandratouza@gmail.com
@@ -102,7 +80,6 @@ MAIL_NAME_TEST = "Sandra"
 TELEGRAM_BOT_TOKEN = 7314993544:AAHgQqcSMd81p7lbDB9OU2P3pgS7hcfb2zA
 TELEGRAM_USER = appsgeg_bot
 TELEGRAM_CHAT_ID = 7314993544
-
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -124,7 +101,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
 
 #APP 
 ITEMS_PAGE = 20
