--- a/sgeg/.env.prod
+++ b/sgeg/.env.prod
@@ -17,8 +17,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sgeg
-DB_USERNAME=root
-DB_PASSWORD=XXXXX
+DB_USERNAME= 
+DB_PASSWORD= 
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -33,19 +33,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# Configuración de SendGrid
+# Configuración de envio correo
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.sendgrid.net
-MAIL_PORT=587
-MAIL_USERNAME=apikey
+MAIL_HOST= 
+MAIL_PORT=587 
+MAIL_USERNAME= 
 MAIL_PASSWORD= 
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=sandra.pereira@alumnos.uvigo.es
+MAIL_ENCRYPTION= 
+MAIL_FROM_ADDRESS= 
 MAIL_FROM_NAME="${APP_NAME}"
- 
-
-MAIL_TO_TEST=null
-MAIL_NAME_TEST=null
 
 TELEGRAM_BOT_TOKEN = 7314993544:AAHgQqcSMd81p7lbDB9OU2P3pgS7hcfb2zA
 TELEGRAM_USER = appsgeg_bot
