--- a/.env-docker
+++ b/.env-docker
@@ -2,7 +2,7 @@
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3366
-DB_DATABASE=sgeg_testing
+DB_DATABASE=sgeg
 DB_USERNAME=sgeg_user
 DB_PASSWORD=sgeg_password
-COMPOSER_ALLOW_SUPERUSER=1
+
