--- a/nginx/nginx-cert.conf
+++ b/nginx/nginx-cert.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name localhost; #sgeg-project.com;
+    server_name localhost; #sgeg.touzaprojects.com;
 
     ssl_certificate /etc/ssl/certs/sgeg-project.crt;
     ssl_certificate_key /etc/ssl/private/sgeg-project.key;
@@ -26,7 +26,7 @@ server {
 # Redirecciona todas las solicitudes HTTP a HTTPS
 server {
     listen 80;
-    server_name  localhost; //sgeg-project.com;
+    server_name  localhost; #sgeg.touzaprojects.com;
 
     return 301 https://$host$request_uri;
 }
