--- a/sgeg/.env.prod
+++ b/sgeg/.env.prod
@@ -43,9 +43,9 @@ MAIL_ENCRYPTION=
 MAIL_FROM_ADDRESS= 
 MAIL_FROM_NAME="${APP_NAME}"
 
-TELEGRAM_BOT_TOKEN = 7314993544:AAHgQqcSMd81p7lbDB9OU2P3pgS7hcfb2zA
+TELEGRAM_BOT_TOKEN =  
 TELEGRAM_USER = appsgeg_bot
-TELEGRAM_CHAT_ID = 7314993544
+TELEGRAM_CHAT_ID =  
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
