--- a/sgeg/.env.dev
+++ b/sgeg/.env.dev
@@ -2,7 +2,7 @@
 
 APP_NAME= SGEG
 APP_ENV=dev #production
-APP_KEY=base64:Q5nUstAuGIBelSuMG37E++mPueeY100wIGLGcPnzvL0=
+APP_KEY= 
 APP_DEBUG=true  #false
 APP_URL=http://127.0.0.1
 
@@ -31,12 +31,12 @@ SESSION_LIFETIME=120
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_PASSWORD= 
 REDIS_PORT=6379
 
 # # Hostinger
 # MAIL_MAILER=smtp
-# MAIL_HOST=smtp.hostinger.com
+# MAIL_HOST= 
 # MAIL_PORT=465
 # MAIL_USERNAME= 
 # MAIL_PASSWORD= 
@@ -58,7 +58,7 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
-MAIL_USERNAME=apikey
+MAIL_USERNAME= 
 MAIL_PASSWORD= 
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS= 
@@ -77,9 +77,9 @@ MAIL_FROM_NAME="${APP_NAME}"
 MAIL_TO_TEST = sandratouza@gmail.com
 MAIL_NAME_TEST = "Sandra"
 
-TELEGRAM_BOT_TOKEN = 7314993544:AAHgQqcSMd81p7lbDB9OU2P3pgS7hcfb2zA
-TELEGRAM_USER = appsgeg_bot
-TELEGRAM_CHAT_ID = 7314993544
+TELEGRAM_BOT_TOKEN =   
+TELEGRAM_USER =  
+TELEGRAM_CHAT_ID =  
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
